--- a/Sunduk.PWA/Dialogs/EditSequenceDialog.razor
+++ b/Sunduk.PWA/Dialogs/EditSequenceDialog.razor
@@ -6,33 +6,65 @@
             @switch (sequence)
             {
                 case FacingSequence facingSequence:
-                    <MudItem xs="12" sm="4">
-                        <MudTextField Label="Общий припуск" @bind-Value="facingSequence.RoughStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
+                    <MudItem xs="12" sm="6">
+                        <MudSelect @bind-Value="Tool" Label="Инструмент" T="Tool">
+                            @foreach (var tool in Tools.Where(x => x is TurningExternalTool))
+                            {
+                                <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                            }
+                        </MudSelect>
                     </MudItem>
-                    <MudItem xs="12" sm="4">
-                        <MudTextField Label="Съем" @bind-Value="facingSequence.StepOver" Immediate="true" Converter="Util.DoubleConverter" />
+                    <MudItem xs="12" sm="6">
+                        <MudTextField Label="Общий припуск" @bind-Value="RoughStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
-                    <MudItem xs="12" sm="4">
-                        <MudTextField Label="Чистовой припуск по Z" @bind-Value="facingSequence.ProfStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
+                    <MudItem xs="12" sm="6">
+                        <MudTextField Label="Съем" @bind-Value="StepOver" Immediate="true" Converter="Util.DoubleConverter" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
+                        <MudTextField Label="Чистовой припуск по Z" @bind-Value="ProfStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
                     break;
                 case RoughFacingSequence roughFacingSequence:
-                    <MudItem xs="12" sm="4">
+                    <MudItem xs="12" sm="6">
+                        <MudSelect @bind-Value="Tool" Label="Инструмент" T="Tool">
+                            @foreach (var tool in Tools.Where(x => x is TurningExternalTool))
+                            {
+                                <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Общий припуск" @bind-Value="roughFacingSequence.RoughStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
-                    <MudItem xs="12" sm="4">
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Съем" @bind-Value="roughFacingSequence.StepOver" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
-                    <MudItem xs="12" sm="4">
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Чистовой припуск по Z" @bind-Value="roughFacingSequence.ProfStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
                     break;
                 case FinishFacingSequence finishFacingSequence:
+                    <MudItem xs="12" sm="6">
+                        <MudSelect @bind-Value="Tool" Label="Инструмент" T="Tool">
+                            @foreach (var tool in Tools.Where(x => x is TurningExternalTool))
+                            {
+                                <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
                     <MudItem xs="12">
                         <MudTextField Label="Чистовой припуск по Z" @bind-Value="finishFacingSequence.ProfStockAllow" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
                     break;
                 case HighSpeedDrillingSequence highSpeedDrillingSequence:
+                    <MudItem xs="4">
+                        <MudSelect @bind-Value="Tool" Label="Инструмент" T="Tool">
+                            @foreach (var tool in Tools.Where(x => x is DrillingTool))
+                            {
+                                <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
                     <MudItem xs="12" sm="6">
                         <MudTextField Label="Начальная точка" @bind-Value="highSpeedDrillingSequence.StartZ" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
@@ -41,24 +73,40 @@
                     </MudItem>
                     break;
                 case PeckDrillingSequence peckDrillingSequence:
-                    <MudItem xs="12" sm="4">
+                    <MudItem xs="12" sm="6">
+                        <MudSelect @bind-Value="Tool" Label="Инструмент" T="Tool">
+                            @foreach (var tool in Tools.Where(x => x is DrillingTool))
+                            {
+                                <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Глубина" @bind-Value="peckDrillingSequence.Depth" Adornment="Adornment.End" AdornmentText="мм" Immediate="true" />
                     </MudItem>
-                    <MudItem xs="12" sm="4">
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Начальная точка" @bind-Value="peckDrillingSequence.StartZ" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
-                    <MudItem xs="12" sm="4">
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Конечная точка" @bind-Value="peckDrillingSequence.EndZ" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
                     break;
                 case PeckDeepDrillingSequence peckDeepDrillingSequence:
-                    <MudItem xs="4">
+                    <MudItem xs="12" sm="6">
+                        <MudSelect @bind-Value="Tool" Label="Инструмент" T="Tool">
+                            @foreach (var tool in Tools.Where(x => x is DrillingTool))
+                            {
+                                <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Глубина" @bind-Value="peckDeepDrillingSequence.Depth" Adornment="Adornment.End" AdornmentText="мм" Immediate="true" />
                     </MudItem>
-                    <MudItem xs="4">
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Начальная точка" @bind-Value="peckDeepDrillingSequence.StartZ" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
-                    <MudItem xs="4">
+                    <MudItem xs="12" sm="6">
                         <MudTextField Label="Конечная точка" @bind-Value="peckDeepDrillingSequence.EndZ" Immediate="true" Converter="Util.DoubleConverter" />
                     </MudItem>
                     break;
@@ -71,13 +119,109 @@
         <MudButton Color="Color.Primary" OnClick="Submit">Ok</MudButton>
     </DialogActions>
 </MudDialog>
-@code {
+@code 
+{
+    protected override void OnInitialized()
+    {
+        switch (sequence)
+        {
+            case FacingSequence facingSequence:
+                Tool = facingSequence.Tool;
+                RoughStockAllow = facingSequence.RoughStockAllow;
+                ProfStockAllow = facingSequence.ProfStockAllow;
+                StepOver = facingSequence.StepOver;
+                break;
+            case RoughFacingSequence roughFacingSequence:
+                Tool = roughFacingSequence.Tool;
+                RoughStockAllow = roughFacingSequence.RoughStockAllow;
+                ProfStockAllow = roughFacingSequence.ProfStockAllow;
+                StepOver = roughFacingSequence.StepOver;
+                break;
+            case FinishFacingSequence finishFacingSequence:
+                Tool = finishFacingSequence.Tool;
+                ProfStockAllow = finishFacingSequence.ProfStockAllow;
+                break;
+
+            case HighSpeedDrillingSequence highSpeedDrillingSequence:
+                Tool = highSpeedDrillingSequence.Tool;
+                DrillStart = highSpeedDrillingSequence.StartZ;
+                DrillEnd = highSpeedDrillingSequence.EndZ;
+                break;
+            case PeckDrillingSequence peckDrillingSequence:
+                Tool = peckDrillingSequence.Tool;
+                DrillStart = peckDrillingSequence.StartZ;
+                DrillEnd = peckDrillingSequence.EndZ;
+                DrillDepth = peckDrillingSequence.Depth;
+                break;
+            case PeckDeepDrillingSequence peckDeepDrillingSequence:
+                Tool = peckDeepDrillingSequence.Tool;
+                DrillStart = peckDeepDrillingSequence.StartZ;
+                DrillEnd = peckDeepDrillingSequence.EndZ;
+                DrillDepth = peckDeepDrillingSequence.Depth;
+                break;
+
+            default:
+                break;
+        }
+    }
+
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
 
     [Parameter] public List<Tool> Tools { get; set; }
     [Parameter] public List<Sequence> Program { get; set; }
     [Parameter] public Sequence sequence { get; set; }
 
-    void Submit() => MudDialog.Close(DialogResult.Ok(true));
+    public Tool Tool { get; set; }
+
+    public double RoughStockAllow { get; set; }
+    public double ProfStockAllow { get; set; }
+    public double StepOver { get; set; }
+
+    public double DrillStart { get; set; }
+    public double DrillEnd { get; set; }
+    public double DrillDepth { get; set; }
+
+    void Submit()
+    {
+        switch (sequence)
+        {
+            case FacingSequence facingSequence:
+                facingSequence.Tool = Tool as TurningExternalTool;
+                facingSequence.RoughStockAllow = RoughStockAllow;
+                facingSequence.ProfStockAllow = ProfStockAllow;
+                facingSequence.StepOver = StepOver;
+                break;
+            case RoughFacingSequence roughFacingSequence:
+                roughFacingSequence.Tool = Tool as TurningExternalTool;
+                roughFacingSequence.RoughStockAllow = RoughStockAllow;
+                roughFacingSequence.ProfStockAllow = ProfStockAllow;
+                roughFacingSequence.StepOver = StepOver;
+                break;
+            case FinishFacingSequence finishFacingSequence:
+                finishFacingSequence.Tool = Tool as TurningExternalTool;
+                finishFacingSequence.ProfStockAllow = ProfStockAllow;
+                break;
+            case HighSpeedDrillingSequence highSpeedDrillingSequence:
+                highSpeedDrillingSequence.Tool = Tool as DrillingTool;
+                highSpeedDrillingSequence.StartZ = DrillStart;
+                highSpeedDrillingSequence.EndZ = DrillEnd;
+                break;
+            case PeckDrillingSequence peckDrillingSequence:
+                peckDrillingSequence.Tool = Tool as DrillingTool;
+                peckDrillingSequence.StartZ = DrillStart;
+                peckDrillingSequence.EndZ = DrillEnd;
+                peckDrillingSequence.Depth = DrillDepth;
+                break;
+            case PeckDeepDrillingSequence peckDeepDrillingSequence:
+                peckDeepDrillingSequence.Tool = Tool as DrillingTool;
+                peckDeepDrillingSequence.StartZ = DrillStart;
+                peckDeepDrillingSequence.EndZ = DrillEnd;
+                peckDeepDrillingSequence.Depth = DrillDepth;
+                break;
+            default:
+                break;
+        }
+        MudDialog.Close(DialogResult.Ok(true));
+    }
     void Cancel() => MudDialog.Cancel();
 }
