--- a/Sunduk.PWA/Pages/NC.razor
+++ b/Sunduk.PWA/Pages/NC.razor
@@ -138,8 +138,9 @@
         get
         {
             return Program.Where(x =>
-            (x is RoughFacingSequence) ||
-            (x is FacingSequence))
+            x is RoughFacingSequence ||
+            x is FacingSequence ||
+            x is RoughFacingCycleSequence)
                 .Count() + 1;
         }
         set { }
