--- a/Sunduk.PWA/Pages/NC.razor
+++ b/Sunduk.PWA/Pages/NC.razor
@@ -61,7 +61,7 @@
         </MudItem>
         <MudGrid>
             <MudItem xs="6" sm="5" md="4">
-                <MudButton Size="Size.Large" Style="margin: 12px; margin-top: 3px" FullWidth="true" Variant="Variant.Outlined"
+                <MudButton Style="margin: 12px; margin-top: 3px" FullWidth="true" Variant="Variant.Outlined"
                            Color="Color.Primary" OnClick="OpenSequencelDialog" Disabled="@(!ValidWorkpiece)">Добавить переход</MudButton>
                 <MudField Label="Список переходов" Variant="Variant.Filled" Margin="Margin.Dense" Style="margin-left: 12px; margin-right: -12px">
                     <MudList Clickable="true" Dense="true" @bind-SelectedItem="SelectedSequence" DisableGutters="true">
